<resources>
    <string name="app_name">EAA2</string>
    <string name="login">Log In</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_password_desc">Enter your email for the verification process. \n We will send 4 digits code to your email.</string>
    <string name="email">E-mail</string>
    <string name="dummy_email">Lexi1234@gmail.com</string>
    <string name="continues">Continue</string>
    <string name="new_password">New Password</string>
    <string name="password_toggle">Password Toggle</string>
    <string name="dummy_user">Hi, Lexi</string>
    <string name="dummy_price">$5.00</string>
    <string name="ludo">Ludo</string>
    <string name="pubg">Pubg</string>
    <string name="card">Card</string>
    <string name="chess">Chess</string>
    <string name="more">More</string>
    <string name="super_reward">Super Reward</string>
    <string name="candy_crush">Candy Crush</string>
    <string name="options_desc">Earn $0.23 by completing the ...</string>
    <string name="get">Get</string>
    <string name="back">Back</string>
    <string name="spin_wheel">Spin Win</string>
    <string name="spin">Spin</string>
    <string name="chances_left">Chances Left = </string>
    <string name="dummy_chances">20</string>
    <string name="rewards">Rewards</string>
    <string name="congratulations">Congratulations</string>
    <string name="you_have_won_rewards">You have won rewards.</string>
    <string name="you_won">You Won</string>
    <string name="scratch_desc">Scratch the above card by swiping on it.</string>
    <string name="time_left">Time Left =</string>
    <string name="dummy_time">05:23:44</string>
    <string name="refer_amp_earn"><![CDATA[Refer & Earn]]></string>
    <string name="terms">Terms</string>
    <string name="your_referral_code">Your Referral Code</string>
    <string name="dummy_referral_code">ER310ER11</string>
    <string name="copy_code">Copy Code</string>
    <string name="or_share_via">Or Share Via</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="share">Share</string>
    <string name="telegram">Telegram</string>
    <string name="invite_amp_earn"><![CDATA[Invite & Earn]]></string>
    <string name="refer_list_1"><![CDATA[Invite your friends & Earn money for lifetime]]></string>
    <string name="refer_list_2">Share your invite code with your friends and family</string>
    <string name="refer_list_3">Get 10% commission for lifetime</string>
    <string name="dummy_username">Lexi Swift</string>
    <string name="my_balance">My Balance</string>
    <string name="invite">Invite</string>
    <string name="help">Help</string>
    <string name="rate_us">Rate Us</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="dummy_user_first_name">Lexi</string>
    <string name="your_balance">Your Balance</string>
    <string name="withdraw">Withdraw</string>
    <string name="amount">Amount</string>
    <string name="dummy_withdraw_amount">100</string>
    <string name="dollar_icon">$</string>
    <string name="paypal">Paypal</string>
    <string name="paytm">Paytm</string>
    <string name="bank">Bank</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="payment">Payment</string>
    <string name="paypal_id">Paypal id</string>
    <string name="paytm_id">Paytm UPI id</string>
    <string name="bank_id">Bank Account No.</string>
    <string name="phone_no">Phone no.</string>
    <string name="payment_mode">paymentMode</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="successful_desc">Your withdrawal request has been Done !</string>
    <string name="done">Done</string>
    <string name="games">Games</string>
    <string name="more_games">More Games</string>
    <string name="game_name">Game Name</string>
    <string name="game_coins">Game Coins</string>
    <string name="google_oauth_key">414361514903-3apeccorqgbv8tt3kfr6pok2qlkq9a4a.apps.googleusercontent.com</string>
    <string name="check_shared_preferences">UserCheck</string>
    <string name="cancy_crush_reward">Candy Crush Reward</string>
    <string name="money_bag_reward">Money Bag Reward</string>
    <string name="surprise_gift_reward">Surprise Gift Reward</string>
    <string name="daily_bonus_reward">Daily Bonus Reward</string>
    <string name="earn_reward_reward">Earn Reward Reward</string>
    <string name="gold_coin_reward">Gold Coin Reward</string>
    <string name="wallet_money_reward">Wallet Money Reward</string>
    <string name="money_bag_time">moneyBagTime</string>
    <string name="surprise_gift_time">surpriseGiftTime</string>
    <string name="daily_bonus_time">dailyBonusTime</string>
    <string name="earn_reward_time">earnRewardTime</string>
    <string name="gold_coin_time">goldCoinTime</string>
    <string name="wallet_money_time">walletMoneyTime</string>
    <string name="rewards_completed">Rewards Completed.</string>
    <string name="intent_extra_name">name</string>
    <string name="intent_extra_balance">balance</string>
    <string name="name">Name</string>
    <string name="isGoogleLogin">isGoogleLogin</string>
    <string name="photoUrl">photoUrl</string>
    <string name="verify_email_address">Verify Email Address</string>
    <string name="dummy_email_text">OTP send to APP hub.987@gmail.com</string>
    <string name="submit_otp">Submit OTP</string>
    <string name="congratulations1">Congratulations!</string>
    <string name="collect">Collect</string>
    <string name="no_chances">0 Chance left</string>
    <string name="play">PLAY</string>
</resources>