<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/spin_layout"
    android:layout_marginBottom="50dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ic_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/back"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_spin_wheel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spin_wheel"
        android:fontFamily="@font/open_sans_semi_bold"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toEndOf="@id/ic_back"
        app:layout_constraintTop_toTopOf="@id/ic_back"
        app:layout_constraintBottom_toBottomOf="@id/ic_back"/>

    <TextView
        android:id="@+id/username_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_price"
        android:fontFamily="@font/open_sans_semi_bold"
        android:textSize="22sp"
        android:textColor="#CC000000"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_spin_wheel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"/>

    <ImageView
        android:id="@+id/spinning_wheel"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:src="@drawable/ic_spining_wheel"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/spin"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintTop_toBottomOf="@id/tv_spin_wheel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_spin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spin"
        android:textAllCaps="false"
        android:fontFamily="@font/open_sans_semi_bold"
        android:textSize="17sp"
        android:background="@drawable/btn_login_background"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:padding="10dp"
        android:textStyle="normal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinning_wheel"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_spin">

        <TextView
            android:id="@+id/tv_chances"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chances_left"
            android:fontFamily="@font/open_sans_bold"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:textColor="#B3000000"
            android:layout_weight="1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/chances"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_chances"
            android:fontFamily="@font/open_sans_bold"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="#FFB573"
            android:textSize="18sp"
            android:textAlignment="textStart"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>