<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.GamesActivity">

    <ImageView
        android:id="@+id/ic_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/back"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_spin_wheel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/games"
        android:fontFamily="@font/open_sans_semi_bold"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toEndOf="@id/ic_back"
        app:layout_constraintTop_toTopOf="@id/ic_back"
        app:layout_constraintBottom_toBottomOf="@id/ic_back"/>

    <TextView
        android:id="@+id/username_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_price"
        android:fontFamily="@font/open_sans_semi_bold"
        android:textSize="22sp"
        android:textColor="#CC000000"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_spin_wheel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"/>

    <GridView
        android:id="@+id/games_grid_view"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:numColumns="3"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_spin_wheel"
        app:layout_constraintBottom_toTopOf="@id/more_games"/>

    <TextView
        android:id="@+id/more_games"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/more_games"
        android:fontFamily="@font/open_sans_semi_bold"
        android:textSize="20sp"
        android:textColor="#E96200"
        android:textAlignment="center"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>