<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="50dp"
    android:gravity="center"
    tools:context=".Activities.SuccessfulActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_successful"
        android:fontFamily="@font/open_sans_regular"
        android:textSize="26sp"
        android:textColor="#80000000"
        android:layout_marginBottom="20dp"/>

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/ic_check"
        android:contentDescription="@string/payment_successful"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/successful_desc"
        android:fontFamily="@font/open_sans_regular"
        android:textSize="16sp"
        android:textColor="#80000000"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/done"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@drawable/btn_done_background"
        android:fontFamily="@font/open_sans_regular"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>


</LinearLayout>